; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_flash.c_FLASH_OB_Unlock.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_flash.c_FLASH_OB_Unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@FLASH = common dso_local global %struct.TYPE_2__* null, align 8
@FLASH_CR_OPTWRE = common dso_local global i32 0, align 4
@RESET = common dso_local global i32 0, align 4
@FLASH_OPTKEY1 = common dso_local global i32 0, align 4
@FLASH_OPTKEY2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @FLASH_OB_Unlock() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @FLASH, align 8
  %2 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 0
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @FLASH_CR_OPTWRE, align 4
  %5 = and i32 %3, %4
  %6 = load i32, i32* @RESET, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %0
  %9 = load i32, i32* @FLASH_OPTKEY1, align 4
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @FLASH, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @FLASH_OPTKEY2, align 4
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @FLASH, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  br label %15

15:                                               ; preds = %8, %0
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
